--- a/index.html
+++ b/index.html
@@ -5,24 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content = "Vira Vasco agora, porque depois vai ser modinha. Miguel, Cazé">
     <title>5 Razões para torcer para o Vasco</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="Vasco 1.svg" alt = "EScudo do maior clube do mundo">
-    <nav>
-        <a>Ingesso para jogos</a>
-        <a>Instagram</a>
-        <a>Bastidores</a>
-        <a>Loja Virtual</a>
+  <header class="cabecalho">
+    <img class="cabecalho-imagem"src="Vasco 1.svg" alt = "EScudo do maior clube do mundo">
+    <nav class="cabecalho-menu">
+        <a class="cabecalho-menu-item">Ingesso para jogos</a>
+        <a class="cabecalho-menu-item">Instagram</a>
+        <a class="cabecalho-menu-item">Bastidores</a>
+        <a class="cabecalho-menu-item">Loja Virtual</a>
     </nav>
   </header> 
 
-  <main>
+  <main class="conteudo">
+    <section class="conteudo-principal">
+      <div class="conteudo-principal-escrito">
+        <h1 class="conteudo-principal-escrito-titulo">Vasco da Gama</h1>
+        <h2 class="conteudo-principal-escrito-subtitulo">Conheça mais sobre o maior clube da história do futebol</h2>
+        <button class="conteudo-principal-escrito-botao">Conhecer mais</button>
+      </div>
+      <img class="conteudo-principal-imagem" src="vasco2 1.svg" alt="Precussor na inclusão de jogadores pretos no futebol brasileiro">
+    </section>
 
+    <section class="conteudo-secundario">
+      <h3 class="conteudo-secundario-titulo">5 motivos para torcer para o Vasco da Gama</h3>
+      <p class="conteudo-secundario-paragrafo">1. <strong>Tradição e História:</strong> O Vasco da Gama é um dos times mais antigos e tradicionais do futebol brasileiro, fundado em 1898. O clube tem uma rica história de conquistas, incluindo quatro títulos brasileiros e uma Libertadores da América.</p>
+      <p class="conteudo-secundario-paragrafo">2. <strong>O Estádio São Januário</strong> é um dos mais tradicionais do Brasil e tem uma história rica em conquistas e emoções para os torcedores vascaínos. O estádio foi inaugurado em 1927 e é considerado um patrimônio cultural e esportivo do país.</p>
+      <p class="conteudo-secundario-paragrafo">3. <strong>Valores Sociais:</strong> O Vasco da Gama tem uma história de luta contra a discriminação racial e social, sendo o primeiro clube brasileiro a aceitar jogadores negros e pobres. O clube também tem uma forte atuação social, com projetos voltados para a inclusão social e a educação.</p>
+      <p class="conteudo-secundario-paragrafo">4. <strong>Torcida Apaixonada</strong> A torcida do Vasco é conhecida por ser muito apaixonada e fiel ao clube, mesmo nos momentos difíceis. Além disso, o Vasco é o time que tem a maior torcida de origem negra no Brasil.</p>
+      <p class="conteudo-secundario-paragrafo">5. <strong>Momento de Reconstrução:</strong> Nos últimos anos, o Vasco da Gama passou por momentos difíceis em termos de resultados em campo e gestão. No entanto, o clube está em um processo de reconstrução, com a criação de um novo projeto esportivo e a chegada de novos jogadores e técnicos. #777</p>
+    </section>
   </main>
 
-  <footer>
-
+  <footer class="rodape">
+    <img class="rodape-imagem" src="images 1.svg">
   </footer>
 </body>
 </html>
